--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@11ty/eleventy": "^0.5.0",
     "luxon": "^1.0.0",
     "markdown-it": "^8.4.1",
-    "markdown-it-anchor": "^4.0.0"
+    "markdown-it-anchor": "^4.0.0",
+    "tailwindcss": "^3.4.14"
   },
   "dependencies": {
     "clean-css": "^4.1.11",
